adding db project

--- a/cali-houseprice-eda/main.ipynb
+++ b/cali-houseprice-eda/main.ipynb
@@ -1676,7 +1676,7 @@
    "metadata": {},
    "source": [
     "1) The columns total_rooms, total_bedrooms, population, household are the columns which are highly correlated\n",
-    "2) This can be reduces by using Variance Inflation Factor(VIF)\n",
+    "2) This can be reduced by using Variance Inflation Factor(VIF)\n",
     "3) The column median_income has good coorlation with target\n",
     "\n",
     "TBD - linear regression"
